Incremental improvements and cleanup